--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h2>Projects and Exercises<h2>
 	<h3>Projects:</h3>
 	<ul>
-		<li> <a href="">Project 1</a> </li>
+		<li> <a href="https://people.rit.edu/~yxb1236/230/project1/">Project 1</a> </li>
 		<li> <a href="">Project 2</a> </li>
 		<li> <a href="">Project 3</a> </li>
 	</ul>
