Fixed index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Yash Bagri's 230 Page</title>
-	<link rel="stylesheet" tye="text/css" href="style/indexStyle.css" />
+	<link rel="stylesheet" type="text/css" href="style/indexStyle.css" />
 	
 </head>
 
@@ -28,7 +28,7 @@
 </section>
 
 <section class="half" id="right">
-	<h2>Projects and Exercises<h2>
+	<h2>Projects and Exercises</h2>
 	<h3>Projects:</h3>
 	<ul>
 		<li> <a href="https://people.rit.edu/~yxb1236/230/project1/">Project 1</a> </li>
