CSS Positioning Exercise

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<ul>
 		<li> <a href="https://people.rit.edu/~spbics/230-06.shtml">Class Page</a> </li>
 		<li> <a href="https://github.com/ShadowCero/IGME-230-2017">Github</a> </li>
+		<li><a href="https://people.rit.edu/_yxb1236/230/Week3/tables.html">CSS and Positioning</a></li>
 	</ul>
 </section>
 
