--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	</ul>
 	<h3>Exercises</h3>
 	<ol>
-		<li> <a href="https://github.com/ShadowCero/IGME-230-2017/blob/master/404%20and%20Auth%20exercise.zip">Authorization and Error</a> </li>		
+		<li> <a href="https://github.com/ShadowCero/IGME-230-2017/blob/master/404%20and%20Auth%20exercise.zip">Authorization and Error</a> </li>
+		<li><a href="https://people.rit.edu/_yxb1236/230/Week 3/tables.html">CSS and Positioning</a></li>
+		<li><a href="htpps://people.rit.edu/~yxb1236/230/Week 4/darth.html">Responsive CSS</a></li>	
 	</ol>
 </section>
 
@@ -46,7 +48,6 @@
 	<ul>
 		<li> <a href="https://people.rit.edu/~spbics/230-06.shtml">Class Page</a> </li>
 		<li> <a href="https://github.com/ShadowCero/IGME-230-2017">Github</a> </li>
-		<li><a href="https://people.rit.edu/_yxb1236/230/Week3/tables.html">CSS and Positioning</a></li>
 	</ul>
 </section>
 
