--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	<h3>Exercises</h3>
 	<ol>
 		<li> <a href="https://github.com/ShadowCero/IGME-230-2017/blob/master/404%20and%20Auth%20exercise.zip">Authorization and Error</a> </li>
-		<li><a href="https://people.rit.edu/_yxb1236/230/Week3/tables.html">CSS and Positioning</a></li>
-		<li><a href="htpps://people.rit.edu/~yxb1236/230/Week4/darth.html">Responsive CSS</a></li>	
+		<li><a href="https://people.rit.edu/yxb1236/230/Week3/tables.html">CSS and Positioning</a></li>
+		<li><a href="https://people.rit.edu/yxb1236/230/Week4/darth.html">Responsive CSS</a></li>	
 	</ol>
 </section>
 
