--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Home</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/proposal.html">Proposal</a></li>
-                    <li><a href="https://people.rit.edu/yxb1236/230/project1/documentation.html">Documentation</a></li>
+                    <li id="currentPage"><a href="https://people.rit.edu/yxb1236/230/project1/documentation.html">Documentation</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/project.html">Game</a></li>
                 </ul>
             </nav>
@@ -28,10 +28,16 @@
                 </section>
                 <section>
                   <h1>Resources</h1>
+                  <p><a href="http://www.dafont.com/squarefont.font">SquareFont</a> from dafont. Used for banner header. Background image created by me.</p>
                </section>
                 <section>
                     <h1>Notes</h1>
                  </section>
+        </div>
+        <div>
+            <footer>
+                <p>&copyYash Bagri 2017</p>
+            </footer>
         </div>
     </div>
 </body>
