--- a/project1/index.html
+++ b/project1/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Home</a></li>
+                    <li id="currentPage"><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Home</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/proposal.html">Proposal</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/documentation.html">Documentation</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/project.html">Game</a></li>
@@ -36,6 +36,11 @@
                 <h1>It's like single player Agar.io</h1>
             </div>
         </article>
+        </div>
+        <div>
+            <footer>
+                <p>&copyYash Bagri 2017</p>
+            </footer>
         </div>
     </div>
 </body>
