--- a/project1/project.html
+++ b/project1/project.html
@@ -18,10 +18,15 @@
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Home</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/proposal.html">Proposal</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/documentation.html">Documentation</a></li>
-                    <li><a href="https://people.rit.edu/yxb1236/230/project1/project.html">Game</a></li>
+                    <li id="currentPage"><a href="https://people.rit.edu/yxb1236/230/project1/project.html">Game</a></li>
                 </ul>
             </nav>
         </header>
+        <div>
+            <footer>
+                <p>&copyYash Bagri 2017</p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
