--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Home</a></li>
-                    <li><a href="https://people.rit.edu/yxb1236/230/project1/proposal.html">Proposal</a></li>
+                    <li id="currentPage"><a href="https://people.rit.edu/yxb1236/230/project1/proposal.html">Proposal</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/documentation.html">Documentation</a></li>
                     <li><a href="https://people.rit.edu/yxb1236/230/project1/project.html">Game</a></li>
                 </ul>
@@ -85,6 +85,11 @@
                     <li>AI</li>
                 </ul>
             </article>
+        </div>
+        <div>
+            <footer>
+                <p>&copyYash Bagri 2017</p>
+            </footer>
         </div>
     </div>
 </body>
