--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -28,7 +28,7 @@
                 </section>
                 <section>
                   <h1>Resources</h1>
-                  <p><a href="http://www.dafont.com/squarefont.font">SquareFont</a> from dafont. Used for banner header. Background image created by me.</p>
+                  <p><a href="http://www.dafont.com/squarefont.font">SquareFont</a> from dafont. Used for banner header. Background image and mockup screens created by me.</p>
                </section>
                 <section>
                     <h1>Notes</h1>
