--- a/project1/index.html
+++ b/project1/index.html
@@ -30,7 +30,7 @@
         </section>
         <article>
             <div>
-                <img src="#" alt="Agar.io pic for now">
+                <img src="media/Mockup2.png" alt="Gameplay Screenshot" class="mockup">
             </div>
             <div>
                 <h1>It's like single player Agar.io</h1>
