--- a/project1/proposal.html
+++ b/project1/proposal.html
@@ -68,6 +68,10 @@
             </article>
             <article>
                 <h1>VII. Screenshots</h1>
+                <div>
+                    <img src="media/Mockup1.png" alt="Title Screen" class="mockup">
+                    <img src="media/Mockup2.png" alt="Gameplay Screen" class="mockup">
+                </div>
             </article>
             <article>
                 <h1>VIII. Other</h1>
