--- a/project1/project.html
+++ b/project1/project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>Geometry Rush!</title>
+	<title>Time to Rush!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="css/styles.css" type="text/css" rel="stylesheet">
 	<script type='text/javascript' src='scripts/respond.min.js'></script>
