fixed validation errors

--- a/project1/index.html
+++ b/project1/index.html
@@ -39,7 +39,7 @@
         </div>
         <div>
             <footer>
-                <p>&copyYash Bagri 2017</p>
+                <p>&copy;Yash Bagri 2017</p>
             </footer>
         </div>
     </div>
