--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <footer>
-                <p>&copyYash Bagri 2017</p>
+                <p>&copy;Yash Bagri 2017</p>
             </footer>
         </div>
     </div>
