--- a/project1/project.html
+++ b/project1/project.html
@@ -24,7 +24,7 @@
         </header>
         <div>
             <footer>
-                <p>&copyYash Bagri 2017</p>
+                <p>&copy;Yash Bagri 2017</p>
             </footer>
         </div>
     </div>
