--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<li> <a href="https://github.com/ShadowCero/IGME-230-2017/blob/master/404%20and%20Auth%20exercise.zip">Authorization and Error</a> </li>
 		<li><a href="https://people.rit.edu/yxb1236/230/Week3/tables.html">CSS and Positioning</a></li>
 		<li><a href="https://people.rit.edu/yxb1236/230/Week4/darth.html">Responsive CSS</a></li>
-	S	<li><a href="https://people.rit.edu/yxb1236/230/Week6/random-phrases-1.html">Ranndom Phrases 1</a></li>	
+		<li><a href="https://people.rit.edu/yxb1236/230/Week6/random-phrases-1.html">Random Phrases 1</a></li>	
 		<li><a href="https://people.rit.edu/yxb1236/230/Week6/random-phrases-2.html">Random Phrases 2</a></li>
 	</ol>
 </section>
