--- a/PixelArtist/pixel-artist.html
+++ b/PixelArtist/pixel-artist.html
@@ -84,23 +84,69 @@ const cellSpacing = 1;
 const container = document.querySelector("#gridContainer");
 
 //3
-const span = document.querySelector("span");
+const span = document.createElement("span");
+span.className = 'cell';
 
 //4
 const cells = [];
 
 //5
-for (let row=0;row<numRows;row++){
+for (let row=0; row<numRows; row++){
     cells.push([]);
     for(let col = 0; col < numCols; col++) {
         let cell = span.cloneNode();
-        cell.style.left = `${ceol * (cellWidth+cellSpacing)}px`;
+        cell.style.left = `${col * (cellWidth+cellSpacing)}px`;
         cell.style.top = `${row * (cellWidth+cellSpacing)}px`;
         container.appendChild(cell);
         cells[row][col] = cell;
     }
 }
 
+//6
+let color = "red";
+
+//7
+container.onclick = fillCell;
+
+//8
+function fillCell(e) {
+	let rect =container.getBoundingClientRect();
+	let mouseX = e.clientX -rect.left;
+	let mouseY = e.clientY - rect.top;
+	let columnWidth = cellWidth+cellSpacing;
+	let col = Math.floor(mouseX/columnWidth);
+	let row = Math.floor(mouseY/columnWidth);
+	let selectedCell = cells[row][col];
+	selectedCell.className = 'cellSelected';
+	selectedCell.style.backgroundColor = color;
+	console.log(`${col},${row}`);
+}
+
+//9
+let mouseIsDown = false;
+
+//10
+container.onmousemove = (e) => {
+	e.preventDefault();
+	if (mouseIsDown) fillCell(e);
+};
+
+//11
+container.onmousedown = (e) => {
+	e.preventDefault();
+	mouseIsDown = true;
+};
+
+//12
+window.onmouseup = (e) => {
+	e.preventDefault();
+	mouseIsDown = false;
+};
+
+//13
+document.querySelector("#colorChooser").onchange = (e) => {
+	color = e.target.value;
+};
 </script>
 </body>
 </html>
