--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<h3>Projects:</h3>
 	<ul>
 		<li> <a href="https://people.rit.edu/~yxb1236/230/project1/">Project 1</a> </li>
-		<li> <a href="">Project 2</a> </li>
+		<li> <a href="https://people.rit.edu/~yxb1236/230/project2/">Project 2</a> </li>
 		<li> <a href="">Project 3</a> </li>
 	</ul>
 	<h3>Exercises</h3>
