--- a/Week11/index.html
+++ b/Week11/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col l4 s12 offset-l2 white-text">
                     <h5>Connect With Us!</h5>
-                    <p><a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true" aria-label="phone"></i></a> <a href="#"><i class="fa fa-envelope fa-2x" aria-hidden="true" aria-label="email"></i></a> <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true" aria-label="facebook"></i></a> <a href="#"><i class="fa fa-instagram fa-2z" aria-hidden="true" aria-label="instagram"></i></a></p>
+                    <p><a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true" aria-label="phone"></i></a> <a href="#"><i class="fa fa-envelope fa-2x" aria-hidden="true" aria-label="email"></i></a> <a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true" aria-label="facebook"></i></a> <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true" aria-label="instagram"></i></a></p>
                 </div>
             </div>
         </div>
