--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <!-- Scripts -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="scripts/jquery-3.2.1.min.js"></script>
 
 </head>
 
