--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,8 +10,8 @@
     <title>Yash Bagri's Portfolio</title>
 
     <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" type="text/css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
