--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		<li><a href="https://people.rit.edu/yxb1236/230/Week6/random-phrases-1.html">Random Phrases 1</a></li>	
 		<li><a href="https://people.rit.edu/yxb1236/230/Week6/random-phrases-2.html">Random Phrases 2</a></li>
 		<li><a href="https://people.rit.edu/yxb1236/230/Week11/">Framework Exercise</a></li>
+		<li><a href="https://people.rit.edu/yxb1236/230/CircleBlast/game.html">Circle Blast!</a></li>
+
 	</ol>
 </section>
 
