--- a/project1/project.html
+++ b/project1/project.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8"/>
-	<title>Time to Rush!</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="css/styles.css" type="text/css" rel="stylesheet">
-	<script type='text/javascript' src='scripts/respond.min.js'></script>
+    <meta charset="utf-8" />
+    <title>Time to Rush!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/styles.css" type="text/css" rel="stylesheet">
+    <script type='text/javascript' src='scripts/respond.min.js'></script>
 </head>
+
 <body>
     <div id="wrapper">
         <header>
             <div class="bg">
-                    <h1><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Geometry Rush!</a></h1>                    
+                <h1><a href="https://people.rit.edu/yxb1236/230/project1/index.html">Geometry Rush!</a></h1>
             </div>
             <nav>
                 <ul>
@@ -22,11 +24,26 @@
                 </ul>
             </nav>
         </header>
+        <div id="game">
+            
+        </div>
         <div>
             <footer>
                 <p>&copy;Yash Bagri 2017</p>
             </footer>
         </div>
     </div>
+
+    <!-- External libraries -->
+    <!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.6.0/pixi.min.js"></script>
+    <!--  https://github.com/goldfire/howler.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.5/howler.js"></script>
+
+    <!-- My JS files -->
+    <script src="js/utilities.js"></script>
+    <script src="js/classes.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
