--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -24,7 +24,10 @@
         </header>
         <div class="bg">
                 <section>
-                    <h1>Progress</h1>
+                    <h1>Game</h1>
+                    <ul>
+                        
+                    </ul>
                 </section>
                 <section>
                   <h1>Resources</h1>
