--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<li> <a href="https://people.rit.edu/~yxb1236/portfolio/">Portfolio</a> </li>
 		<li> <a href="https://people.rit.edu/~yxb1236/230/project1/">Project 1</a> </li>
 		<li> <a href="https://people.rit.edu/~yxb1236/230/project2/">Project 2</a> </li>
-		<li> <a href="#">Project 3</a> </li>
+		<li> <a href="https://people.rit.edu/~yxb1236/230/project1/project.html">Project 3</a> </li>
 	</ul>
 	<h3>Exercises</h3>
 	<ol>
