--- a/project1/documentation.html
+++ b/project1/documentation.html
@@ -26,12 +26,26 @@
                 <section>
                     <h1>Game</h1>
                     <ul>
-                        
+                        <li>Creating a "simple" evasion game while sounds simple was quite the task for me at the start.</li>
+                        <li>There is a ton of set up to the scene which I never considered when starting this which turned this project into an arduous task.</li>
+                        <li>For this project I used the circle blast exercise as a base since it had similar logic to what my game would need.</li>
+                        <li>I then built the game's logic from there using a ton of tutorials.</li>
+                        <li>W3Schools and the PIXIJS tutorials provided me with the most information such as time and keyboard controls.</li>
+                        <li>One problem I encountered when making the game was my time slowing feature.</li>
+                        <li>I wasn't able to figure out how to keep track of time while holding the key with the way I read keyboard inputs.</li>
+                        <li>Because of this I nyxed the powerups and the time limit on the power. I kept the power in the game though since the two different speeds are exhilirating.</li>
+                        <li>Another bug is that some circles wont bounce off the edges of the screen and get stuck there.</li>
                     </ul>
                 </section>
                 <section>
                   <h1>Resources</h1>
                   <p><a href="http://www.dafont.com/squarefont.font">SquareFont</a> from dafont. Used for banner header. Background image and mockup screens created by me.</p>
+                  <ul>
+                      <li><a href="https://howlerjs.com/">Howler</a></li>
+                      <li><a href="https://www.pixijs.com/">Pixi JS</a></li>
+                      <li><a href="https://freesound.org/people/GameAudio/sounds/220203/">Death Sound</a></li>
+                      <li><a href="https://www.dl-sounds.com/royalty-free/loading-loop/">BGM</a></li>
+                  </ul>
                </section>
                 <section>
                     <h1>Notes</h1>
